[package]
name = "broken"
version = "0.1.0"
authors = ["tomerh <hacohen0tomer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
byteorder = "1.3.4"
rand = "0.7.3"
rayon = "1.3.0"
grep = "0.2"
termcolor = "1.1.0"
