[package]
name = "broken"
version = "0.1.0"
authors = ["tomerh <hacohen0tomer@gmail.com>"]
edition = "2018"

[[bin]]
name = "brenc"
path = "src/enc/main.rs"

[[bin]]
name = "brgrep"
path = "src/grep/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"



[dependencies]
crypto-hash = "0.3.4"
byteorder = "1.3.4"
rand = "0.7.3"
rayon = "1.3.0"
grep = "0.2"
termcolor = "1.1.0"
glob = "0.3.0"
